# class-projects

./: .gitignore  README.md  _config.yml  genTrees.sh
CS1400_CS1/: README.md
CS5300_Compilers/: CMakeLists.txt  Questions.txt  README.md  cpsl  main.cpp  output.asm  parser.y  scanner.l  todo.txt
CS5300_Compilers/scripts/: cnr.sh  cnrd.sh  compile.sh  compileAll.sh  compileDir.sh  runAll.sh  runTest.sh
CS5300_Compilers/src/: AddNode.cpp  AddNode.hpp  AndNode.cpp  AndNode.hpp  AssignmentStatementNode.cpp  AssignmentStatementNode.hpp  BodyNode.cpp  BodyNode.hpp  BooleanLiteralNode.cpp  BooleanLiteralNode.hpp  CharacterExpressionNode.cpp  CharacterExpressionNode.hpp  CharacterLiteralNode.cpp  CharacterLiteralNode.hpp  ConstantDeclarationNode.cpp  ConstantDeclarationNode.hpp  DeclarationNode.hpp  DivideNode.cpp  DivideNode.hpp  EqualExpressionNode.cpp  EqualExpressionNode.hpp  ExpressionNode.cpp  ExpressionNode.hpp  Factory.hpp  ForStatementNode.cpp  ForStatementNode.hpp  FormalParameter.cpp  FormalParameter.hpp  FunctionCallNode.cpp  FunctionCallNode.hpp  FunctionDeclarationNode.cpp  FunctionDeclarationNode.hpp  GreaterThanEqualNode.cpp  GreaterThanEqualNode.hpp  GreaterThanNode.cpp  GreaterThanNode.hpp  IdentifierNode.cpp  IdentifierNode.hpp  IfStatementNode.cpp  IfStatementNode.hpp  (+71 more)
CS5300_Compilers/src/log/: easylogging++.cc  easylogging++.h
CS5300_Compilers/test/control/: simple_if.cpsl
CS5300_Compilers/test/function/: procedure_with_args.cpsl
CS6030_HighPerformanceComputing/CUDA/hello/: CMakeLists.txt  cuda_info.cu  hello.cu  notch-peak-short-shared-info.txt
CS6030_HighPerformanceComputing/CUDA/newton_fractal/: CMakeLists.txt  cuda_helpers.cu  helpers.hpp  image.cu  main.cu  newton_solver.cu  ppm.h  print.hpp  run.sh
CS6030_HighPerformanceComputing/Exercises/SharedMutex/: CMakeLists.txt  LinkedList.hpp  Node.hpp  OrderedLinkedList.hpp  ThreadSafeOrderedLinkedList.hpp  main.cpp
CS6030_HighPerformanceComputing/Exercises/albert_root_finding_method/: CMakeLists.txt
CS6030_HighPerformanceComputing/Exercises/albert_root_finding_method/aberth/: CMakeLists.txt
CS6030_HighPerformanceComputing/Exercises/albert_root_finding_method/aberth-exe/: CMakeLists.txt  main.cpp
CS6030_HighPerformanceComputing/Exercises/albert_root_finding_method/function/: CMakeLists.txt
CS6030_HighPerformanceComputing/Exercises/albert_root_finding_method/tests/: CMakeLists.txt  tests.cpp
CS6030_HighPerformanceComputing/Homework/2_threads_histogram/: CMakeLists.txt  plot.py  run.sh
CS6030_HighPerformanceComputing/Homework/2_threads_histogram/histogram/: CMakeLists.txt  benchmark.cpp  helpers.hpp  histogram.hpp  main.cpp
CS6030_HighPerformanceComputing/Homework/2_threads_histogram/tests/: CMakeLists.txt  tests.cpp
CS6030_HighPerformanceComputing/Homework/2_threads_histogram/writeup/: Makefile  writeup.md
CS6030_HighPerformanceComputing/Homework/3_omp_count_sort/: CMakeLists.txt  plot_chunksize.py  plot_data_count.py  plot_thread_count.py  run.sh
CS6030_HighPerformanceComputing/Homework/3_omp_count_sort/count_sort/: CMakeLists.txt  benchmark.cpp  count_sort.hpp  helpers.hpp  main.cpp  print.hpp
CS6030_HighPerformanceComputing/Homework/3_omp_count_sort/data/: timings_chunksize1-1000.csv  timings_chunksize_1-100.csv  timings_data_count_array.csv  timings_data_count_iterator.csv  timings_move.csv  timings_move_array.csv  timings_outer_only.csv  timings_outer_only_array.csv
CS6030_HighPerformanceComputing/Homework/3_omp_count_sort/tests/: CMakeLists.txt  tests.cpp
CS6030_HighPerformanceComputing/Homework/3_omp_count_sort/writeup/: Makefile  writeup.md
CS6030_HighPerformanceComputing/Homework/4_gpu_matrix_transpose/: CMakeLists.txt  gc_1024x1024.raw  plots.py
CS6030_HighPerformanceComputing/Homework/4_gpu_matrix_transpose/transpose/: CMakeLists.txt  benchmark.cu  helpers.hpp  helpers_cuda.hpp  image.cu  main.cu  print.hpp  transpose.cu
CS6030_HighPerformanceComputing/Homework/4_gpu_matrix_transpose/writeup/: writeup.md
CS6030_HighPerformanceComputing/Homework/5_mpi_histogram/: CMakeLists.txt  mpi_batch_script.sh  plot.py  run.py
CS6030_HighPerformanceComputing/Homework/5_mpi_histogram/Helpers/: CMakeLists.txt
CS6030_HighPerformanceComputing/Homework/5_mpi_histogram/Histogram/: CMakeLists.txt
CS6030_HighPerformanceComputing/Homework/5_mpi_histogram/data/: timing-no_scatter-no_barrier.csv  timing.csv
CS6030_HighPerformanceComputing/Homework/5_mpi_histogram/driver/: CMakeLists.txt  benchmark.cpp  main.cpp
CS6030_HighPerformanceComputing/Homework/5_mpi_histogram/writeup/: writeup.md
CS6030_HighPerformanceComputing/VectorField/: CMakeLists.txt  bench_cuda.py  bench_cuda.sh  bench_mpi.py  bench_mpi.sh  bench_thread.py  bench_thread.sh  cmake_setup.sh  compress.sh  get_node.sh  plot_all.py  plot_cuda.py  plot_mpi.py  plot_thread.py
CS6030_HighPerformanceComputing/VectorField/Expected/: CMakeLists.txt
CS6030_HighPerformanceComputing/VectorField/Expected/test/: CMakeLists.txt  Expected_test.cpp
CS6030_HighPerformanceComputing/VectorField/Graphics/: CMakeLists.txt
CS6030_HighPerformanceComputing/VectorField/Helpers/: CMakeLists.txt
CS6030_HighPerformanceComputing/VectorField/Math/: CMakeLists.txt  Makefile
CS6030_HighPerformanceComputing/VectorField/Math/test/: CMakeLists.txt  Pnt2_test.cpp  RK_test.cpp  Vec2_test.cpp
CS6030_HighPerformanceComputing/VectorField/VectorField/: CMakeLists.txt
CS6030_HighPerformanceComputing/VectorField/data/: timing_cuda.csv  timing_mpi.csv  timing_thread.csv  timing_thread2.csv
CS6030_HighPerformanceComputing/VectorField/driver_cuda/: CMakeLists.txt  ParseArgs.hpp  main.cu
CS6030_HighPerformanceComputing/VectorField/driver_mpi/: CMakeLists.txt  ParseArgs.hpp  main.cpp  main_grid.cpp  mpi_get_type.hpp  mpi_utils.hpp  print.hpp  scatter.hpp
CS6030_HighPerformanceComputing/VectorField/driver_serial/: CMakeLists.txt  ParseArgs.hpp  main.cpp
CS6030_HighPerformanceComputing/VectorField/driver_thread/: CMakeLists.txt  ParseArgs.hpp  main.cpp
CS6030_HighPerformanceComputing/VectorField/writeup/: writeup.md
(+1227 files in other folders)
